# governance-kit

./: README.md  govkitspec.md  pyproject.toml
.github/workflows/: ci.yaml
src/governance/: __init__.py  cli.py  overlay.py
src/governance/rules/: architecture.md  process.md  stack.md
tests/: __init__.py  test_cli.py  test_overlay.py
